# adexpsim

./: CMakeLists.txt  README.md  count_lines.sh  scripts.REMOVED.git-id
cli/: CMakeLists.txt
cli/src/: AdExpEvaluationMetric.cpp  AdExpEvaluationMinApices.cpp  AdExpFit.cpp  AdExpIntegratorBenchmark.cpp  AdExpIntegratorBug.cpp  AdExpOptimization.cpp  AdExpSim.cpp  AdExpSimDemo.cpp  AdExploration.cpp
core/: CMakeLists.txt
core/include/: config.h  config.h.in
core/src/common/: Matrix.cpp  Matrix.hpp  ProbabilityUtils.cpp  ProbabilityUtils.hpp  Terminal.cpp  Terminal.hpp  Timer.cpp  Timer.hpp  Types.hpp  Vector.cpp  Vector.hpp
core/src/exploration/: Evaluation.cpp  Evaluation.hpp  EvaluationResult.cpp  EvaluationResult.hpp  Exploration.cpp  Exploration.hpp  ExplorationOpenCL.hpp  FractionalSpikeCount.cpp  FractionalSpikeCount.hpp  Optimization.cpp  Optimization.hpp  Simplex.hpp  SimplexPool.cpp  SimplexPool.hpp  SingleGroupEvaluation.cpp  SingleGroupEvaluation.hpp  SingleGroupEvaluationBase.cpp  SingleGroupEvaluationBase.hpp  SingleGroupMultiOutEvaluation.cpp  SingleGroupMultiOutEvaluation.hpp  SingleGroupSingleOutEvaluation.cpp  SingleGroupSingleOutEvaluation.hpp  SpikeTrainEvaluation.cpp  SpikeTrainEvaluation.hpp
core/src/simulation/: AdaptiveStepsizeRungeKutta.hpp  Controller.cpp  Controller.hpp  DormandPrinceIntegrator.cpp  DormandPrinceIntegrator.hpp  HardwareParameters.cpp  HardwareParameters.hpp  Integrator.cpp  Integrator.hpp  Model.hpp  Parameters.cpp  Parameters.hpp  Recorder.cpp  Recorder.hpp  Spike.cpp  Spike.hpp  SpikeTrain.cpp  SpikeTrain.hpp  State.hpp
core/src/utils/: Matrix.hpp  ParameterCollection.cpp  ParameterCollection.hpp  Types.hpp
gui/: CMakeLists.txt
gui/lib/: qcustomplot.cpp
gui/presets/: default.json  ess_preset.json
gui/src/: main.cpp
gui/src/controller/: AbstractViewerWindow.cpp  AbstractViewerWindow.hpp  ExplorationWindow.cpp  ExplorationWindow.hpp  MainWindow.cpp  MainWindow.hpp  SimulationWindow.cpp  SimulationWindow.hpp
gui/src/model/: IncrementalExploration.cpp  IncrementalExploration.hpp  NeuronSimulation.cpp  NeuronSimulation.hpp  OptimizationJob.cpp  OptimizationJob.hpp
gui/src/view/: Colors.cpp  Colors.hpp  ExplorationWidget.cpp  ExplorationWidget.hpp  ExplorationWidgetCrosshair.cpp  ExplorationWidgetCrosshair.hpp  ExplorationWidgetGradients.cpp  ExplorationWidgetGradients.hpp  ExplorationWidgetInvalidOverlay.cpp  ExplorationWidgetInvalidOverlay.hpp  MainWindow.cpp  MainWindow.hpp  NeuronSimulationWidget.cpp  NeuronSimulationWidget.hpp  OptimizationWidget.cpp  OptimizationWidget.hpp  ParameterWidget.cpp  ParameterWidget.hpp  ParametersWidget.cpp  ParametersWidget.hpp  PlotMarker.cpp  PlotMarker.hpp  PresetsWidget.cpp  PresetsWidget.hpp  SimulationResultWidget.hpp  SingleGroupWidget.cpp  SingleGroupWidget.hpp  SpikeTrainEnvironmentWidget.cpp  SpikeTrainEnvironmentWidget.hpp  SpikeTrainWidget.cpp  SpikeTrainWidget.hpp  SpikeWidget.cpp  SpikeWidget.hpp
io/: CMakeLists.txt
io/lib/: jsoncpp.cpp
io/src/io/: JsonIo.cpp  JsonIo.hpp  ParameterIo.hpp  SurfacePlotIo.cpp  SurfacePlotIo.hpp
lib/: CMakeLists.txt
lib/src/core/: Parameters.hpp  Recorder.hpp
lib/src/exploration/: Evaluation.cpp  Simplex.cpp
lib/src/utils/: FastMath.hpp  Types.hpp
src/: AdExpOptimization.cpp  AdExpSim.cpp  AdExploration.cpp  Model.cpp  Model.hpp  Parameters.cpp  Parameters.hpp  Spike.cpp  Spike.hpp  State.cpp  State.hpp
src/core/: Model.hpp  Parameters.cpp  Parameters.hpp  Recorder.cpp  Recorder.hpp  Spike.cpp  Spike.hpp  State.hpp  Types.hpp
src/exploration/: Evaluation.cpp  Evaluation.hpp  Simplex.hpp
src/utils/: Timer.cpp  Timer.hpp  Types.cpp  Vector.hpp
